# app-multiagent-research-multivocal

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  google-firecrawl-step1-exemplo-1.py  google-firecrawl-step1-exemplo-2.py  main.py  pyproject.toml  scopus-exemplo.py  validate.py
data/github/: step-1-initial-search.json
data/github/gpt-5.4-pro/: step-2-screen-title.json  step-3-screen-abstract.json  step-4-screen-full.json
data/google/: step-1-initial-search.json
data/google/gpt-5.4-pro/: step-2-screen-title.json  step-3-screen-abstract.json  step-4-screen-full.json
data/hf/: step-1-initial-search.json
data/hf/gpt-5.4-pro/: step-2-screen-title.json  step-3-screen-abstract.json  step-4-screen-full.json
data/review/gpt-5.4-pro/: step-2-review-reviewed.xlsx  step-2-review.xlsx  step-3-residuals-review-reviewed.xlsx  (+9 more)
data/scopus/: step-1-initial-search.json
prompts/: step2-title-screening.md  step3-abstract-screening.md  step3-hf-keywords.md  step3-summary.md  step4-fulltext-screening.md  step4-research-answers.md
protocol-settings/: 1-research-question.json  2-search-string.json  3-inclusion-criterias.json  4-exclusion_criterias.json  5-grey-quality-appraisal.json
rmr/: __init__.py  cli.py  config.py  llm.py  metrics.py  paths.py  reconcile.py  review.py  steps.py
rmr/content/: __init__.py  abstracts.py  arxiv.py  scopus_gateway.py  scrape.py  titles.py
rmr/screening/: __init__.py  abstract.py  fulltext.py  title.py
rmr/sources/: __init__.py  grey.py  scopus.py
rmr/validation/: __init__.py  sampler.py  scorer.py  stats.py
(+599 files in other folders)
